--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,150 @@
+div {
+  background-color: #EFFFFD;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
+
 body {
-  background-color: #EAF6F6;
+  background-color: #EFFFFD;
+  color: #40514E;
+  font-family: 'Merriweather', serif;
+  margin: 0;
+  text-align: center;
+  }
+
+h1 {
+  color: #66BFBF;
+  font-family: 'Sacramento', cursive;
+  font-size: 5.625rem;
+  line-height: 2;
+  margin: 50px auto 0 auto;
+}
+
+/****1em = 100% = 16px****/
+/****em and % are inherited, px is not****/
+/****rem = root em, ignores parent sizing****/
+
+h2 {
+  color: #66BFBF;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+}
+
+h3 {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+}
+
+a {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
 }
 
 hr {
-  border-style: none;
-  border-top-style: dotted;
-  border-color: gray;
-  border-width: 5px;
-  height: 0;
-  width: 5%;
+  border: dotted #40514E 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+  clear: both;
 }
 
-h1, h3 {
-  color: #66BFBF
+p {
+  line-height: 2;
+}
+
+.top-container {
+  background-color: #EAF6F6;
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.middle-container {
+  background-color: #EAF6F6;
+  color: #40514E;
+  margin: 100px 0;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
+  color: #EAF6F6;
+  font-size: 10pt;
+  padding: 30px 0 20px;
+}
+
+.pro {
+  text-decoration: underline;
+}
+
+.intro {
+  width: 30%;
+  margin: auto;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 250px;
+  bottom: 300px;
+}
+
+.profile-pic {
+  border-radius: 50%;
+}
+
+/*make profile change on mouse-over*/
+.profile-pic:hover {
+  border-radius: 0;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+/****Margin order top-right-left-bottom****/
+/****Margin order top/bottom left/right****/
+
+.bars-icon {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.coffee-icon {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+
+.btn {
+  background: #11cdd4;
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  border-radius: 8px;
+  color: #ffffff;
+  font-family: 'Monserrat', sans-serif;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+.copyright {
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
